# raid-composition-backend

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  local.Dockerfile
.github/workflows/: docker.yml
migrations/: 202605010001_auth.sql  202605020001_guilds.down.sql  202605020001_guilds.up.sql
src/: config.rs  db.rs  main.rs  state.rs
src/api/: error.rs  mod.rs
src/api/controllers/: auth.rs
src/api/dto/: user.rs
src/api/routes/: mod.rs
src/api/routes/v1/: mod.rs
src/api/routes/v1/auth/: discord.rs  mod.rs  session.rs
src/api/routes/v1/guilds/: invites.rs  members.rs  mod.rs
src/api/routes/v1/health/: app.rs  mod.rs  postgres.rs  redis.rs
src/auth/: crypto.rs  discord.rs  geoip.rs  mod.rs  service.rs
src/guilds/: dto.rs  service.rs
src/routes/: mod.rs
src/routes/v1/: mod.rs
src/routes/v1/auth/: mod.rs
