[package]
name = "raid-composition-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
serde = { version = "1.0" }
serde_json = { version = "1.0" }
dotenv = "0.15.0"
sqlx = { version = "0.9.0-alpha.1", features = ["postgres", "runtime-tokio", "chrono", "uuid", "ipnet"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
