[package]
name = "raid-composition-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
actix-cors = "0.7.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
dotenv = "0.15.0"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "chrono", "uuid", "ipnet"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
redis = { version = "1.2.0", features = ["tokio-comp"] }
base64 = "0.22.1"
chacha20poly1305 = "0.10.1"
hmac = "0.12.1"
ipnet = "2.11.0"
maxminddb = "0.26.0"
rand = "0.8.5"
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls"] }
sha2 = "0.10.8"
subtle = "2.6.1"
url = "2.5.4"
